<resources>
    <string name="app_name">No Hate</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
</resources>